linux-logs -> threads

--- a/configs/fluent-bit.conf
+++ b/configs/fluent-bit.conf
@@ -13,6 +13,6 @@
     Name        kafka
     Match       *
     Brokers     kafka:9092
-    Topics      linux-logs
+    Topics      threats
     Timestamp_Key @timestamp
     Retry_Limit 5
